<resources>
    <string name="app_name">MVPDagger2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_accessibility">Accessibility</string>
    <string name="tv_type">Type: Recreational</string>
    <string name="tv_price">Price: 0</string>
    <string name="btn_activity">GET RANDOM ACTIVITY</string>
    <string name="tv_activity">Do something nice for someone you care about</string>
</resources>
