<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment"
    android:background="#484b4f">

    <TextView
        android:id="@+id/tv_accessibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        style="@style/coolerText"
        android:text="@string/tv_accessibility" />

    <RatingBar
        android:id="@+id/ratingBar_accessibility"
        android:theme="@style/RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_accessibility"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:numStars="5"
        android:rating="1"
        android:isIndicator="true"/>

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_toStartOf="@id/tv_price"
        android:layout_below="@id/ratingBar_accessibility"
        style="@style/coolerText"
        android:text="@string/tv_type"/>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ratingBar_accessibility"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_alignParentEnd="true"
        style="@style/coolerText"
        android:text="@string/tv_price" />

    <TextView
        android:id="@+id/tv_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_type"
        android:layout_above="@id/btn_activity"
        android:layout_marginStart="10dp"
        style="@style/coolerText"
        android:text="@string/tv_activity" />

    <Button
        android:id="@+id/btn_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:textColor="#FFFFFF"
        android:text="@string/btn_activity" />

</RelativeLayout>